<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp"
            app:layout_constraintDimensionRatio="h,4:3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/holo_blue_light"
                android:gravity="center"
                android:text="@string/btn_select_pic"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/iv_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view">

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/str_intro"
                android:textColor="@color/gray8"
                android:textSize="14dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_pic" />

        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/tv_select_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="@drawable/shape_btn_bg"
            android:paddingStart="26dp"
            android:paddingTop="12dp"
            android:paddingEnd="26dp"
            android:paddingBottom="12dp"
            android:text="@string/btn_select_pic"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_clear_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_btn_bg"
            android:gravity="center"
            android:paddingStart="14dp"
            android:paddingTop="20dp"
            android:paddingEnd="14dp"
            android:paddingBottom="20dp"
            android:text="@string/btn_clear_device"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:visibility="invisible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_clear_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_btn_bg"
            android:gravity="center"
            android:paddingStart="14dp"
            android:paddingTop="20dp"
            android:paddingEnd="14dp"
            android:paddingBottom="20dp"
            android:text="@string/btn_clear_time"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:visibility="invisible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_clear_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_btn_bg"
            android:gravity="center"
            android:paddingStart="14dp"
            android:paddingTop="20dp"
            android:paddingEnd="14dp"
            android:paddingBottom="20dp"
            android:text="@string/btn_clear_gps"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:visibility="invisible"
            tools:visibility="visible" />

    </LinearLayout>

</FrameLayout>